--- a/.github/workflows/publish-release.yaml
+++ b/.github/workflows/publish-release.yaml
@@ -23,7 +23,7 @@ jobs:
         run: chmod +x ./checksum.sh
 
       - name: Generate cache key
-        run: ./checksum.sh checksum.tx
+        run: ./checksum.sh checksum.txt
 
       - name: Copy CI gradle.properties
         run: mkdir -p ~/.gradle ; cp .github/ci-gradle.properties ~/.gradle/gradle.properties
