--- a/.github/workflows/publish-release.yaml
+++ b/.github/workflows/publish-release.yaml
@@ -49,14 +49,14 @@ jobs:
           key: ${{ runner.os }}-gradle-${{ hashFiles('checksum.txt') }}
           restore-keys: |
             ${{ runner.os }}-gradle-
-      - name: Run Static Code Analysis
-        uses: eskatos/gradle-command-action@v1.3.3
-        with:
-          wrapper-cache-enabled: true
-          dependencies-cache-enabled: true
-          configuration-cache-enabled: true
-          arguments: lintRelease ktlintCheck detekt spotlessCheck --scan
-        id: gradle
+#      - name: Run Static Code Analysis
+#        uses: eskatos/gradle-command-action@v1.3.3
+#        with:
+#          wrapper-cache-enabled: true
+#          dependencies-cache-enabled: true
+#          configuration-cache-enabled: true
+#          arguments: lintRelease ktlintCheck detekt spotlessCheck --scan
+#        id: gradle
 
       - name: (Fail-only) Comment Build Scan Url
         uses: actions/github-script@v3
